# QuantumFlux

./: README.md
pqcrypto_kyber/: README.md  pubspec.yaml
pqcrypto_kyber/android/: build.gradle  settings.gradle
pqcrypto_kyber/android/src/main/: AndroidManifest.xml
pqcrypto_kyber/android/src/main/cpp/: CMakeLists.txt  kyber_wrapper.c  kyber_wrapper.h  pqclean_shim.c
pqcrypto_kyber/example/: README.md  pubspec.yaml
pqcrypto_kyber/example/android/app/: build.gradle.kts
pqcrypto_kyber/example/integration_test/: plugin_integration_test.dart
pqcrypto_kyber/example/ios/Runner/: Info.plist
pqcrypto_kyber/example/ios/Runner.xcodeproj/: project.pbxproj
pqcrypto_kyber/example/ios/RunnerTests/: RunnerTests.swift
pqcrypto_kyber/example/lib/: main.dart
pqcrypto_kyber/example/test/: widget_test.dart
pqcrypto_kyber/ios/: pqcrypto_kyber.podspec
pqcrypto_kyber/ios/Classes/: PqcryptoKyberPlugin.swift  kyber_wrapper.h  kyber_wrapper.mm
pqcrypto_kyber/lib/: pqcrypto_kyber.dart  pqcrypto_kyber_method_channel.dart  pqcrypto_kyber_platform_interface.dart
pqcrypto_kyber/lib/src/: ffi_bindings.dart
pqcrypto_kyber/scripts/: fetch_pqclean.ps1
pqcrypto_kyber/test/: pqcrypto_kyber_method_channel_test.dart  pqcrypto_kyber_test.dart
quantumflux/: README.md  pubspec.yaml
quantumflux/android/app/: build.gradle.kts
quantumflux/android/app/src/main/: AndroidManifest.xml
quantumflux/lib/: main.dart
quantumflux/lib/app/: app.dart  route.dart
quantumflux/lib/controller/: app_controller.dart  kyber_provider.dart
quantumflux/lib/manager/: color_manager.dart  image_manager.dart
quantumflux/lib/model/: quantumvalue_model.dart
quantumflux/lib/service/: api_service.dart  storage_service.dart
quantumflux/lib/ui/kyber/: kyber_screen.dart
quantumflux/lib/ui/landing/: landing.dart
quantumflux/lib/ui/splash/: splash.dart
quantumflux/test/: widget_test.dart
(+7 files in other folders)
